unpackaged/main/default/objects/PR_Header__c/PR_Header__c.object-meta.xml
<CustomObject>
    <label>PR Requests</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PR Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>