unpackaged/main/default/objects/PR_Header__c/fields/Approval_Process_Recalled__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Recalled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Process Recalled ?</label>
    <type>Checkbox</type>
</CustomField>