unpackaged/main/default/objects/PR_Header__c/fields/Campaign_Spend_Count__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Spend_Count__c</fullName>
    <label>Campaign Spend Count</label>
    <summaryFilterItems>
        <field>PR_Phasing__c.Campaign_Spend_Created__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>PR_Phasing__c.PR_Header__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>