unpackaged/main/default/objects/PR_Header__c/fields/Date_Time_Procurement_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Procurement_Approved__c</fullName>
    <label>Date/Time Procurement Approved</label>
    <type>DateTime</type>
</CustomField>