unpackaged/main/default/objects/PR_Header__c/fields/Finance_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Finance_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Finance team reviewer</description>
    <label>Finance Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PR_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>