unpackaged/main/default/objects/PR_Header__c/fields/Header_Note__c.field-meta.xml
<CustomField>
    <fullName>Header_Note__c</fullName>
    <formula>Text(Payment_Terms__c)+BR()+Text(PR_Currency__c )+BR()+ Finance_Notes__c</formula>
    <label>Header Note</label>
    <type>Text</type>
</CustomField>