unpackaged/main/default/objects/PR_Header__c/fields/Phasing_Count__c.field-meta.xml
<CustomField>
    <fullName>Phasing_Count__c</fullName>
    <label>Phasing Count</label>
    <summaryForeignKey>PR_Phasing__c.PR_Header__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>