unpackaged/main/default/objects/PR_Header__c/fields/PR_Currency__c.field-meta.xml
<CustomField>
    <fullName>PR_Currency__c</fullName>
    <label>PR Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
                <default>true</default>
                <label>USD</label>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>INR</fullName>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
            <value>
                <fullName>MXN</fullName>
            </value>
            <value>
                <fullName>NZD</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>SGD</fullName>
            </value>
            <value>
                <fullName>TRY</fullName>
            </value>
            <value>
                <fullName>AUS</fullName>
                <isActive>false</isActive>
                <label>AUS</label>
            </value>
            <value>
                <fullName>CAN</fullName>
                <isActive>false</isActive>
                <label>CAN</label>
            </value>
            <value>
                <fullName>JAP</fullName>
                <isActive>false</isActive>
                <label>JAP</label>
            </value>
            <value>
                <fullName>MEX</fullName>
                <isActive>false</isActive>
                <label>MEX</label>
            </value>
            <value>
                <fullName>SGF</fullName>
                <isActive>false</isActive>
                <label>SGF</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>