unpackaged/main/default/objects/PR_Header__c/fields/PR_Details_Records_Count__c.field-meta.xml
<CustomField>
    <fullName>PR_Details_Records_Count__c</fullName>
    <description>Count of all PR Details created under this PR header</description>
    <inlineHelpText>Count of all PR Details created under this PR header</inlineHelpText>
    <label># PR Details Records Count</label>
    <summaryForeignKey>PR_Detail__c.PR_Header__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>