unpackaged/main/default/objects/PR_Header__c/fields/PR_Details_With_No_Phasing__c.field-meta.xml
<CustomField>
    <fullName>PR_Details_With_No_Phasing__c</fullName>
    <description>Rollup the detail records count if there is no phasing records exist.</description>
    <label>PR Details With No Phasing</label>
    <summaryFilterItems>
        <field>PR_Detail__c.Phasing_Records_Count__c</field>
        <operation>equals</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>PR_Detail__c.PR_Header__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>