unpackaged/main/default/objects/PR_Header__c/fields/PR_Year__c.field-meta.xml
<CustomField>
    <fullName>PR_Year__c</fullName>
    <description>Get the Year from the Request Date</description>
    <formula>TEXT(YEAR(Request_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PR Year</label>
    <type>Text</type>
</CustomField>