unpackaged/main/default/objects/PR_Header__c/fields/Procurement_Approved__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Procurement Approved</label>
    <type>Checkbox</type>
</CustomField>