unpackaged/main/default/objects/PR_Header__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <label>SAP Submission Date</label>
    <type>Date</type>
</CustomField>