unpackaged/main/default/objects/PR_Header__c/fields/SAP_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Company_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SAP Company Code</label>
    <referenceTo>SAP_Company_Code__c</referenceTo>
    <relationshipName>PR_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>