unpackaged/main/default/objects/PR_Header__c/fields/SAP_Support__c.field-meta.xml
<CustomField>
    <fullName>SAP_Support__c</fullName>
    <label>SAP Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XHPOTRU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>