unpackaged/main/default/objects/PR_Header__c/fields/Total_Phasing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Phasing_Amount__c</fullName>
    <description>Roll up of all Phasing Amount</description>
    <inlineHelpText>Sum of all related Phasing Amount</inlineHelpText>
    <label>Total Phasing Amount</label>
    <summarizedField>PR_Detail__c.Phasing_Amount__c</summarizedField>
    <summaryForeignKey>PR_Detail__c.PR_Header__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>