unpackaged/main/default/objects/PR_Header__c/fields/Total_PR_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_PR_Amount_USD__c</fullName>
    <formula>Total_PR_Amount__c / (CURRENCYRATE(text(CurrencyIsoCode)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total PR Amount (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>