unpackaged/main/default/objects/PR_Header__c/fields/Vendor_Company_Code_Status__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Company_Code_Status__c</fullName>
    <formula>IF(TEXT(SAP_Company_Code__r.Status__c)='Active',true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Company Code Status</label>
    <type>Checkbox</type>
</CustomField>