unpackaged/main/default/objects/PR_Header__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Vendor does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filterItems>
        <infoMessage>Select The Vendor Record For PR</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>PR_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>