unpackaged/main/default/objects/PR_Header__c/fields/Vendor_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Number__c</fullName>
    <formula>Vendor_Name__r.SAP_Vendor_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Number</label>
    <type>Text</type>
</CustomField>