unpackaged/main/default/objects/PR_Header__c/recordTypes/Submitted.recordType-meta.xml
<RecordType>
    <fullName>Submitted</fullName>
    <active>true</active>
    <description>Record Type of PR Submitted for Approval</description>
    <label>Submitted</label>
</RecordType>