unpackaged/main/default/objects/PR_Header__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vendor_Name__c</columns>
    <columns>Finance_Reviewer__c</columns>
    <columns>Status__c</columns>
    <columns>Budgeted_Amount__c</columns>
    <columns>Payment_Terms__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Total_PR_Amount__c</columns>
    <columns>SAP_Company_Code__c</columns>
    <columns>SAP_PR_Number__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>1. All</label>
    <language>en_US</language>
</ListView>