unpackaged/main/default/objects/PR_Header__c/listViews/X5_a.listView-meta.xml
<ListView>
    <fullName>X5_a</fullName>
    <columns>NAME</columns>
    <columns>Vendor_Name__c</columns>
    <columns>Finance_Reviewer__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Terms__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Total_PR_Amount__c</columns>
    <columns>SAP_Company_Code__c</columns>
    <columns>SAP_PR_Number__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved By Finance</value>
    </filters>
    <filters>
        <field>SAP_Company_Code__c</field>
        <operation>equals</operation>
        <value>USC0</value>
    </filters>
    <label>5.b Approved by Finance USC0</label>
    <language>en_US</language>
</ListView>